--- a/output/california-notice.html
+++ b/output/california-notice.html
@@ -238,7 +238,7 @@
 <h3>5.2 How to Withdraw</h3>
 <p>Customers may withdraw from a financial incentive program at any time by:</p>
 <ul>
-<li>Emailing <a href="mailto:privacy@catchai.com">privacy@catchai.com</a></li>
+<li>Emailing <a href="mailto:privacy@aisrc.net">privacy@aisrc.net</a></li>
 <li>Accessing account settings and opting out</li>
 <li>Calling our customer service line</li>
 <li>Submitting a written request</li>
@@ -287,10 +287,10 @@
 <li>Non-discrimination for exercising CCPA rights</li>
 </ul>
 <p>To exercise these rights, contact us at:</p>
-<p><strong>Email:</strong> <a href="mailto:privacy@catchai.com">privacy@catchai.com</a><br><strong>Phone:</strong> [Contact Number]<br><strong>Address:</strong> [Your Company Address]</p>
+<p><strong>Email:</strong> <a href="mailto:privacy@aisrc.net">privacy@aisrc.net</a><br><strong>Phone:</strong> [Contact Number]<br><strong>Address:</strong> [Your Company Address]</p>
 <h2>10. Contact Information</h2>
 <p>For questions about this California Notice or our financial incentive programs:</p>
-<p><strong>Email:</strong> <a href="mailto:privacy@catchai.com">privacy@catchai.com</a><br><strong>Web Form:</strong> [Your Company Website]/contact<br><strong>Mail:</strong> [Your Company Address]</p>
+<p><strong>Email:</strong> <a href="mailto:privacy@aisrc.net">privacy@aisrc.net</a><br><strong>Web Form:</strong> [Your Company Website]/contact<br><strong>Mail:</strong> [Your Company Address]</p>
 <h2>11. Effective Date</h2>
 <p>This notice is effective as of January 22, 2026, and applies to all financial incentive programs offered on or after this date.</p>
 
