--- a/output/privacy-statement.html
+++ b/output/privacy-statement.html
@@ -251,7 +251,7 @@
 <p>We use cookies and similar technologies to enhance your experience, analyze usage patterns, and deliver targeted content.</p>
 <h2>9. Contact Us</h2>
 <p>For privacy-related questions or concerns:</p>
-<p><strong>Email:</strong> <a href="mailto:privacy@catchai.com">privacy@catchai.com</a><br><strong>Phone:</strong> [Contact Number]<br><strong>Address:</strong> [Your Company Address]</p>
+<p><strong>Email:</strong> <a href="mailto:privacy@aisrc.net">privacy@aisrc.net</a><br><strong>Phone:</strong> [Contact Number]<br><strong>Address:</strong> [Your Company Address]</p>
 <h2>10. Updates to This Statement</h2>
 <p>We may update this Privacy Statement periodically. Changes will be posted with an updated effective date.</p>
 
