--- a/output/terms-of-use.html
+++ b/output/terms-of-use.html
@@ -221,7 +221,7 @@
 <h2>8. Contact Us</h2>
 <p>If you have any questions about these Terms of Use, please contact us at:</p>
 <ul>
-<li>Email: <a href="mailto:legal@catchai.com">legal@catchai.com</a></li>
+<li>Email: <a href="mailto:legal@aisrc.net">legal@aisrc.net</a></li>
 <li>Address: [Your Company Address]</li>
 </ul>
 
