--- a/output/privacy-policy.html
+++ b/output/privacy-policy.html
@@ -227,7 +227,7 @@
 <h2>7. Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, please contact us at:</p>
 <ul>
-<li>Email: <a href="mailto:privacy@catchai.com">privacy@catchai.com</a></li>
+<li>Email: <a href="mailto:privacy@aisrc.net">privacy@aisrc.net</a></li>
 <li>Address: [Your Company Address]</li>
 </ul>
 
