--- a/output/en/privacy-statement.html
+++ b/output/en/privacy-statement.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Terms of Use">
-    <title>Terms of Use - CatchAI</title>
+    <meta name="description" content="Privacy Statement">
+    <title>Privacy Statement - CatchAI</title>
     <style>
         * {
             margin: 0;
@@ -192,45 +192,75 @@
 </head>
 <body>
     <div class="container">
-        <h1>Terms of Use</h1>
-<p><strong>Last Updated: January 22, 2026</strong></p>
-<h2>1. Acceptance of Terms</h2>
-<p>By accessing and using CatchAI&#39;s services, you accept and agree to be bound by the terms and provision of this agreement. If you do not agree to abide by the above, please do not use this service.</p>
-<h2>2. Use License</h2>
-<p>Permission is granted to temporarily download one copy of the materials (information or software) on CatchAI&#39;s website or services for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:</p>
+        <h1>Privacy Statement</h1>
+<p><strong>Effective Date: January 22, 2026</strong></p>
+<h2>Overview</h2>
+<p>CatchAI is committed to protecting your privacy. This Privacy Statement explains how we collect, use, disclose, and safeguard your information when you visit our website and use our services.</p>
+<h2>1. Information We Collect</h2>
+<h3>1.1 Information You Provide</h3>
 <ul>
-<li>Modifying or copying the materials</li>
-<li>Using the materials for any commercial purpose or for any public display (commercial or non-commercial)</li>
-<li>Attempting to decompile or reverse engineer any software contained on the service</li>
-<li>Removing any copyright or other proprietary notations from the materials</li>
-<li>Transferring the materials to another person or &quot;mirroring&quot; the materials on any other server</li>
-<li>Violating any applicable laws or regulations</li>
-<li>Harassing or causing distress or inconvenience to any person</li>
-<li>Offending the decency of internet users</li>
+<li>Account registration information (name, email, password)</li>
+<li>Communication information when you contact us</li>
+<li>Payment information for transactions</li>
+<li>Profile information and preferences</li>
+<li>Content you upload or create</li>
 </ul>
-<h2>3. Disclaimer of Warranties</h2>
-<p>The materials on CatchAI&#39;s website are provided &quot;as is&quot;. CatchAI makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.</p>
-<h2>4. Limitations of Liability</h2>
-<p>In no event shall CatchAI or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on CatchAI&#39;s website.</p>
-<h2>5. Accuracy of Materials</h2>
-<p>The materials appearing on CatchAI&#39;s website could include technical, typographical, or photographic errors. CatchAI does not warrant that any of the materials on the website are accurate, complete, or current.</p>
-<h2>6. Modifications</h2>
-<p>CatchAI may revise these terms of service for the website at any time without notice. By using this website, you are agreeing to be bound by the then current version of these terms of service.</p>
-<h2>7. Governing Law</h2>
-<p>These terms and conditions are governed by and construed in accordance with the laws of the jurisdiction in which the Company is located, and you irrevocably submit to the exclusive jurisdiction of the courts in that location.</p>
-<h2>8. Contact Us</h2>
-<p>If you have any questions about these Terms of Use, please contact us at:</p>
+<h3>1.2 Information Automatically Collected</h3>
 <ul>
-<li>Email: <a href="mailto:legal@aisrc.net">legal@aisrc.net</a></li>
-<li>Address: [Your Company Address]</li>
+<li>Log data (IP address, browser type, pages visited, time spent)</li>
+<li>Device information (device type, operating system, unique identifiers)</li>
+<li>Location information (if permitted)</li>
+<li>Cookies and similar tracking technologies</li>
 </ul>
+<h2>2. Use of Information</h2>
+<p>We use the information we collect for:</p>
+<ul>
+<li>Providing, maintaining, and improving our services</li>
+<li>Processing transactions and sending related information</li>
+<li>Sending promotional communications (with your consent)</li>
+<li>Responding to your inquiries and providing customer support</li>
+<li>Conducting research and analytics</li>
+<li>Detecting and preventing fraudulent or illegal activity</li>
+<li>Complying with legal obligations</li>
+</ul>
+<h2>3. Data Sharing</h2>
+<p>We do not sell or rent your personal data to third parties. We may share your information with:</p>
+<ul>
+<li>Service providers who assist us in operating our services</li>
+<li>Law enforcement when required by law</li>
+<li>Business partners with your consent</li>
+<li>In case of sale or merger of our company</li>
+</ul>
+<h2>4. Data Retention</h2>
+<p>We retain your personal data for as long as necessary to provide our services and comply with legal obligations. You may request deletion of your data at any time, subject to legal requirements.</p>
+<h2>5. Your Rights</h2>
+<p>Depending on your location, you may have the right to:</p>
+<ul>
+<li>Access your personal data</li>
+<li>Correct inaccurate data</li>
+<li>Request deletion of your data</li>
+<li>Opt-out of marketing communications</li>
+<li>Data portability</li>
+<li>Withdraw consent</li>
+</ul>
+<h2>6. Data Security</h2>
+<p>We implement industry-standard security measures to protect your data from unauthorized access, alteration, disclosure, or destruction. However, no method of transmission over the Internet is entirely secure.</p>
+<h2>7. International Transfers</h2>
+<p>Your information may be transferred to, stored in, and processed in countries other than your country of residence. These countries may have different data protection laws.</p>
+<h2>8. Cookies and Tracking</h2>
+<p>We use cookies and similar technologies to enhance your experience, analyze usage patterns, and deliver targeted content.</p>
+<h2>9. Contact Us</h2>
+<p>For privacy-related questions or concerns:</p>
+<p><strong>Email:</strong> <a href="mailto:privacy@aisrc.net">privacy@aisrc.net</a><br><strong>Phone:</strong> [Contact Number]<br><strong>Address:</strong> [Your Company Address]</p>
+<h2>10. Updates to This Statement</h2>
+<p>We may update this Privacy Statement periodically. Changes will be posted with an updated effective date.</p>
 
         <div class="nav-links">
-            <a href="index.html">← Back to Home</a>
-            <a href="privacy-policy.html">Privacy Policy</a>
-            <a href="terms-of-use.html">Terms of Use</a>
-            <a href="privacy-statement.html">Privacy Statement</a>
-            <a href="california-notice.html">California Notice</a>
+            <a href="en/index.html">← Back to Home</a>
+            <a href="en/privacy-policy.html">Privacy Policy</a>
+            <a href="en/terms-of-use.html">Terms of Use</a>
+            <a href="en/privacy-statement.html">Privacy Statement</a>
+            <a href="en/california-notice.html">California Notice</a>
         </div>
     </div>
 </body>
