--- a/kr/california-notice.html
+++ b/kr/california-notice.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Privacy Policy">
-    <title>Privacy Policy - CatchAI</title>
+    <meta name="description" content="개인정보 처리 요약 안내 (Privacy Statement)">
+    <title>개인정보 처리 요약 안내 (Privacy Statement) - CatchAI</title>
     <style>
         * {
             margin: 0;
@@ -192,52 +192,55 @@
 </head>
 <body>
     <div class="container">
-        <h1>Privacy Policy</h1>
-<p><strong>Last Updated: January 22, 2026</strong></p>
-<h2>1. Introduction</h2>
-<p>CatchAI (&quot;Company&quot;, &quot;we&quot;, &quot;us&quot;, or &quot;our&quot;) operates the CatchAI Android application and related services. This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our service.</p>
-<h2>2. Information Collection and Use</h2>
-<p>We collect several different types of information for various purposes to provide and improve our service to you.</p>
-<h3>2.1 Personal Data</h3>
+        <h1>개인정보 처리 요약 안내 (Privacy Statement)</h1>
+<p>Catch AI is committed to protecting your privacy. This Privacy Statement provides a clear and concise overview of how we handle personal data in connection with our AI-based deepfake voice detection service.</p>
+<h2>1. Information We Collect</h2>
+<h3>Information You Provide</h3>
 <ul>
-<li>Name and email address</li>
-<li>Phone number</li>
-<li>Audio files submitted for analysis</li>
-<li>Usage data and analytics</li>
-<li>Device information (IP address, device type, operating system)</li>
-<li>Cookies and tracking technologies</li>
+<li>Email address and account identifier provided through Google Sign-In</li>
+<li>Audio files uploaded or recorded by you for analysis</li>
 </ul>
-<h3>2.2 How We Use Your Data</h3>
+<h3>Information Automatically Generated</h3>
 <ul>
-<li>To provide and maintain our service</li>
-<li>To analyze and detect audio deepfakes</li>
-<li>To notify you about changes to our service</li>
-<li>To allow you to participate in interactive features</li>
-<li>To provide customer care and support</li>
-<li>To gather analysis or valuable information to improve our service</li>
-<li>To monitor the usage of our service</li>
-<li>To detect, prevent, and address technical issues</li>
+<li>Non-identifiable device environment information (such as OS and app version)</li>
+<li>Service usage logs and error records that do not identify individuals</li>
 </ul>
-<h2>3. Use of Cookies</h2>
-<p>We use cookies and similar tracking technologies to enhance your experience. You can instruct your browser to refuse cookies or alert you when cookies are sent.</p>
-<h2>4. Security of Data</h2>
-<p>The security of your data is important to us. While we strive to use commercially acceptable means to protect your personal data, please remember that no method of transmission over the Internet or method of electronic storage is 100% secure.</p>
-<h2>5. Links to Other Sites</h2>
-<p>Our service may contain links to other sites that are not operated by us. This Privacy Policy does not apply to third-party websites, and we are not responsible for their practices.</p>
-<h2>6. Changes to This Privacy Policy</h2>
-<p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page and updating the &quot;Last Updated&quot; date.</p>
-<h2>7. Contact Us</h2>
-<p>If you have any questions about this Privacy Policy, please contact us at:</p>
+<p>We do not collect phone numbers, physical addresses, location data, call logs, messages, device unique identifiers (IMEI, MAC address), advertising identifiers, or store IP addresses as personal identifiers.</p>
+<h2>2. Purpose of Use</h2>
+<p>We use the collected information solely for the following purposes:</p>
+<ul>
+<li>Providing AI-based audio deepfake detection services</li>
+<li>Ensuring service stability and troubleshooting</li>
+<li>Preventing security threats and misuse</li>
+<li>Complying with applicable laws and Google Play policies</li>
+</ul>
+<h2>3. Audio Data Processing</h2>
+<ul>
+<li>Audio data is used only for automated AI-based deepfake analysis.</li>
+<li>Audio data is not stored on our servers and is deleted immediately after analysis.</li>
+<li>Audio data is not used for AI training, reuse, marketing, or shared with third parties.</li>
+</ul>
+<h2>4. Data Sharing</h2>
+<p>We do not sell, rent, or share personal data or audio data with third parties, except where required by law.</p>
+<h2>5. Your Rights</h2>
+<p>Depending on applicable laws, you may request access to, correction, deletion, or restriction of processing of your personal data by contacting us.</p>
+<h2>6. Data Security</h2>
+<p>We implement reasonable technical and organizational security measures, including access control and periodic security checks, to protect your information.</p>
+<h2>7. Changes to This Statement</h2>
+<p>This Privacy Statement may be updated from time to time. Material changes will be communicated through the Service.</p>
+<h2>8. Contact</h2>
+<p>For privacy-related inquiries:</p>
 <ul>
 <li>Email: <a href="mailto:privacy@aisrc.net">privacy@aisrc.net</a></li>
 </ul>
+<p>For full details, please refer to our Privacy Policy.</p>
 
         <div class="nav-links">
-            <a href="index.html">← Back to Home</a>
-            <a href="privacy-policy.html">Privacy Policy</a>
-            <a href="terms-of-use.html">Terms of Use</a>
-            <a href="privacy-statement.html">Privacy Statement</a>
-            <a href="california-notice.html">California Notice</a>
+            <a href="kr/index.html">← Back to Home</a>
+            <a href="kr/privacy-policy.html">Privacy Policy</a>
+            <a href="kr/terms-of-use.html">Terms of Use</a>
+            <a href="kr/privacy-statement.html">Privacy Statement</a>
+            <a href="kr/california-notice.html">California Notice</a>
         </div>
     </div>
 </body>
