--- a/en/california-notice.html
+++ b/en/california-notice.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Privacy Statement">
-    <title>Privacy Statement - CatchAI</title>
+    <meta name="description" content="California Notice of Financial Incentive">
+    <title>California Notice of Financial Incentive - CatchAI</title>
     <style>
         * {
             margin: 0;
@@ -192,75 +192,46 @@
 </head>
 <body>
     <div class="container">
-        <h1>Privacy Statement</h1>
-<p><strong>Effective Date: January 22, 2026</strong></p>
-<h2>Overview</h2>
-<p>CatchAI is committed to protecting your privacy. This Privacy Statement explains how we collect, use, disclose, and safeguard your information when you visit our website and use our services.</p>
-<h2>1. Information We Collect</h2>
-<h3>1.1 Information You Provide</h3>
+        <h1>California Notice of Financial Incentive</h1>
+<h2>1. Overview</h2>
+<p>This California Notice of Financial Incentive is provided pursuant to the California Consumer Privacy Act (CCPA), as amended by the California Privacy Rights Act (CPRA), and applies solely to residents of the State of California.</p>
+<h2>2. No Financial Incentive Programs</h2>
+<p>Catch AI does not offer any financial incentives, compensation, discounts, rewards, loyalty programs, referral benefits, or other value-based programs in exchange for the collection, retention, use, or sharing of personal information or biometric data.</p>
+<h2>3. Personal Information and Service Access</h2>
 <ul>
-<li>Account registration information (name, email, password)</li>
-<li>Communication information when you contact us</li>
-<li>Payment information for transactions</li>
-<li>Profile information and preferences</li>
-<li>Content you upload or create</li>
+<li>Personal information is collected only to the extent necessary to provide the Catch AI service, comply with applicable laws, and ensure service security.</li>
+<li>Users are not provided with monetary or non-monetary benefits in exchange for providing personal information.</li>
 </ul>
-<h3>1.2 Information Automatically Collected</h3>
+<h2>4. Non-Discrimination</h2>
+<p>In accordance with the CCPA and CPRA, Catch AI does not discriminate against users for exercising their privacy rights, including the right to access, delete, or limit the use of personal information.</p>
+<h2>5. Future Changes</h2>
+<p>If Catch AI introduces any financial incentive programs in the future, we will:</p>
 <ul>
-<li>Log data (IP address, browser type, pages visited, time spent)</li>
-<li>Device information (device type, operating system, unique identifiers)</li>
-<li>Location information (if permitted)</li>
-<li>Cookies and similar tracking technologies</li>
+<li>Provide prior and clear notice of the program</li>
+<li>Disclose the categories of personal information involved</li>
+<li>Explain how the value of the incentive is reasonably related to the value of the data</li>
+<li>Obtain user consent where required by law</li>
 </ul>
-<h2>2. Use of Information</h2>
-<p>We use the information we collect for:</p>
+<h2>6. Consumer Rights Under California Law</h2>
+<p>California residents have the right to:</p>
 <ul>
-<li>Providing, maintaining, and improving our services</li>
-<li>Processing transactions and sending related information</li>
-<li>Sending promotional communications (with your consent)</li>
-<li>Responding to your inquiries and providing customer support</li>
-<li>Conducting research and analytics</li>
-<li>Detecting and preventing fraudulent or illegal activity</li>
-<li>Complying with legal obligations</li>
+<li>Know what personal information is collected and used</li>
+<li>Request deletion of personal information</li>
+<li>Opt out of the sale or sharing of personal information</li>
+<li>Not be discriminated against for exercising privacy rights</li>
 </ul>
-<h2>3. Data Sharing</h2>
-<p>We do not sell or rent your personal data to third parties. We may share your information with:</p>
+<h2>7. Contact Information</h2>
+<p>For questions regarding this Notice or your privacy rights, please contact us:</p>
 <ul>
-<li>Service providers who assist us in operating our services</li>
-<li>Law enforcement when required by law</li>
-<li>Business partners with your consent</li>
-<li>In case of sale or merger of our company</li>
+<li>Email: <a href="mailto:privacy@aisrc.net">privacy@aisrc.net</a></li>
 </ul>
-<h2>4. Data Retention</h2>
-<p>We retain your personal data for as long as necessary to provide our services and comply with legal obligations. You may request deletion of your data at any time, subject to legal requirements.</p>
-<h2>5. Your Rights</h2>
-<p>Depending on your location, you may have the right to:</p>
-<ul>
-<li>Access your personal data</li>
-<li>Correct inaccurate data</li>
-<li>Request deletion of your data</li>
-<li>Opt-out of marketing communications</li>
-<li>Data portability</li>
-<li>Withdraw consent</li>
-</ul>
-<h2>6. Data Security</h2>
-<p>We implement industry-standard security measures to protect your data from unauthorized access, alteration, disclosure, or destruction. However, no method of transmission over the Internet is entirely secure.</p>
-<h2>7. International Transfers</h2>
-<p>Your information may be transferred to, stored in, and processed in countries other than your country of residence. These countries may have different data protection laws.</p>
-<h2>8. Cookies and Tracking</h2>
-<p>We use cookies and similar technologies to enhance your experience, analyze usage patterns, and deliver targeted content.</p>
-<h2>9. Contact Us</h2>
-<p>For privacy-related questions or concerns:</p>
-<p><strong>Email:</strong> <a href="mailto:privacy@aisrc.net">privacy@aisrc.net</a><br><strong>Phone:</strong> [Contact Number]<br><strong>Address:</strong> [Your Company Address]</p>
-<h2>10. Updates to This Statement</h2>
-<p>We may update this Privacy Statement periodically. Changes will be posted with an updated effective date.</p>
 
         <div class="nav-links">
-            <a href="index.html">← Back to Home</a>
-            <a href="privacy-policy.html">Privacy Policy</a>
-            <a href="terms-of-use.html">Terms of Use</a>
-            <a href="privacy-statement.html">Privacy Statement</a>
-            <a href="california-notice.html">California Notice</a>
+            <a href="en/index.html">← Back to Home</a>
+            <a href="en/privacy-policy.html">Privacy Policy</a>
+            <a href="en/terms-of-use.html">Terms of Use</a>
+            <a href="en/privacy-statement.html">Privacy Statement</a>
+            <a href="en/california-notice.html">California Notice</a>
         </div>
     </div>
 </body>
