[fix] duplicate locale in href

--- a/output/en/privacy-policy.html
+++ b/output/en/privacy-policy.html
@@ -294,11 +294,11 @@
 <p>This Privacy Policy may be amended due to changes in applicable laws, government policies, or internal Company policies. In such cases, the Company will provide prior notice through announcements within the Service.</p>
 
         <div class="nav-links">
-            <a href="en/index.html">← Back to Home</a>
-            <a href="en/privacy-policy.html">Privacy Policy</a>
-            <a href="en/terms-of-use.html">Terms of Use</a>
-            <a href="en/privacy-statement.html">Privacy Statement</a>
-            <a href="en/california-notice.html">California Notice</a>
+            <a href="index.html">← Back to Home</a>
+            <a href="privacy-policy.html">Privacy Policy</a>
+            <a href="terms-of-use.html">Terms of Use</a>
+            <a href="privacy-statement.html">Privacy Statement</a>
+            <a href="california-notice.html">California Notice</a>
         </div>
     </div>
 </body>
