--- a/output/kr/terms-of-use.html
+++ b/output/kr/terms-of-use.html
@@ -253,11 +253,11 @@
 </ul>
 
         <div class="nav-links">
-            <a href="kr/index.html">← Back to Home</a>
-            <a href="kr/privacy-policy.html">Privacy Policy</a>
-            <a href="kr/terms-of-use.html">Terms of Use</a>
-            <a href="kr/privacy-statement.html">Privacy Statement</a>
-            <a href="kr/california-notice.html">California Notice</a>
+            <a href="index.html">← Back to Home</a>
+            <a href="privacy-policy.html">Privacy Policy</a>
+            <a href="terms-of-use.html">Terms of Use</a>
+            <a href="privacy-statement.html">Privacy Statement</a>
+            <a href="california-notice.html">California Notice</a>
         </div>
     </div>
 </body>
