--- a/output/kr/terms-of-use.html
+++ b/output/kr/terms-of-use.html
@@ -194,13 +194,13 @@
     <div class="container">
         <h1>서비스 이용약관 (Terms of Use)</h1>
 <p><strong>시행일자</strong>: 2026년 ○월 ○일</p>
-<p>본 이용약관은 AISRC(이하 “회사”)가 제공하는 인공지능 기반 딥페이크 음성 탐지 애플리케이션 Catch AI(이하 “서비스”)의 이용과 관련하여 회사와 이용자 간의 권리, 의무 및 책임사항을 규정함을 목적으로 합니다. 이용자는 본 약관 및 개인정보 처리방침에 동의함으로써 서비스를 이용할 수 있습니다. 본 약관에 동의하지 않는 경우, 서비스 이용을 중단하여 주시기 바랍니다.</p>
+<p>본 이용약관은 AISRC(이하 회사)가 제공하는 인공지능 기반 딥페이크 음성 탐지 애플리케이션 Catch AI(이하 서비스)의 이용과 관련하여 회사와 이용자 간의 권리, 의무 및 책임사항을 규정함을 목적으로 합니다. 이용자는 본 약관 및 개인정보 처리방침에 동의함으로써 서비스를 이용할 수 있습니다. 본 약관에 동의하지 않는 경우, 서비스 이용을 중단하여 주시기 바랍니다.</p>
 <h2>제1조 (용어의 정의)</h2>
 <ol>
-<li>**“이용자”**란 본 약관에 따라 서비스를 이용하는 자를 말합니다.</li>
-<li>**“서비스”**란 회사가 제공하는 딥페이크 음성 탐지 및 이에 부수하는 제반 서비스를 말합니다.</li>
-<li>**“음성 데이터”**란 이용자가 서비스에 업로드하거나, 외부(SNS, 메신저, 저장소 등)에서 불러오거나, 직접 녹음한 음성을 말합니다.</li>
-<li>**“분석 결과”**란 인공지능 분석을 통해 산출된 딥페이크 가능성에 대한 정보성 결과를 말합니다.</li>
+<li><strong>이용자</strong>란 본 약관에 따라 서비스를 이용하는 자를 말합니다.</li>
+<li><strong>서비스</strong>란 회사가 제공하는 딥페이크 음성 탐지 및 이에 부수하는 제반 서비스를 말합니다.</li>
+<li><strong>음성 데이터</strong>란 이용자가 서비스에 업로드하거나, 외부(SNS, 메신저, 저장소 등)에서 불러오거나, 직접 녹음한 음성을 말합니다.</li>
+<li><strong>분석 결과</strong>란 인공지능 분석을 통해 산출된 딥페이크 가능성에 대한 정보성 결과를 말합니다.</li>
 </ol>
 <h2>제2조 (서비스의 성격 및 한계)</h2>
 <ol>
@@ -232,7 +232,7 @@
 </ol>
 <h2>제6조 (보증의 부인 및 책임의 제한)</h2>
 <ol>
-<li>본 서비스는 “있는 그대로(AS IS)” 제공됩니다.</li>
+<li>본 서비스는 있는 그대로(AS IS) 제공됩니다.</li>
 <li>회사는 분석 결과의 오류, 오탐 또는 미탐으로 인해 발생한 손해에 대해 책임을 지지 않습니다.</li>
 <li>이용자가 분석 결과를 신뢰하거나 이를 활용하여 발생한 모든 책임은 이용자 본인에게 귀속됩니다.</li>
 <li>무료로 제공되는 서비스와 관련하여, 관련 법령에 특별한 규정이 없는 한 회사는 책임을 부담하지 않습니다.</li>
